# Whisperer

./: .env.example  .gitignore  AGENTS.md  DANIELE.md  PITCH.html  PLAN.md  PROGRESS.md  README.md  ROADMAP.md
assets/: README.md
audio nonna/: README.md
harness/: README.md  gen_verdicts.py  judge.py  measure_realtime_cost.py  runner.py
recordings/: base_run1.jsonl  base_run10.jsonl  base_run2.jsonl  base_run3.jsonl  base_run4.jsonl  base_run5.jsonl  base_run6.jsonl  base_run7.jsonl  base_run8.jsonl  base_run9.jsonl  long-call_base_run1.jsonl  long-call_base_run1_cost.jsonl  long-call_base_run2.jsonl  long-call_base_run2_cost.jsonl  long-call_base_run3.jsonl  long-call_base_run3_cost.jsonl  long-call_base_run4.jsonl  long-call_base_run4_cost.jsonl  long-call_base_run5.jsonl  long-call_base_run5_cost.jsonl  long-call_sug_run1.jsonl  long-call_sug_run1_cost.jsonl  long-call_sug_run2.jsonl  long-call_sug_run2_cost.jsonl  long-call_sug_run3.jsonl  long-call_sug_run3_cost.jsonl  long-call_sug_run4.jsonl  long-call_sug_run4_cost.jsonl  long-call_sug_run5.jsonl  long-call_sug_run5_cost.jsonl  studierai-oral_base_run1.jsonl  studierai-oral_base_run1_cost.jsonl  (+20 more)
sdk/: README.md  pyproject.toml
sdk/whisperer/: __init__.py  connectors.py  cost_meter.py  distiller.py  injector.py  realtime_cost_meter.py  state_store.py  watchdog.py
server/: OWNER.md
server/server/: batch_run.py  pyproject.toml  server.py
server/server/app/: agent_config.py  api_template.py.example  cost_projection.py  distiller.py  injector.py  realtime_relay.py  state_store.py  truncation.py  utils.py
(+108 files in other folders)
