[project]
name = "whisperer-sdk"
version = "0.1.0"
description = "Drop-in, model-agnostic memory layer for long voice-agent calls — distiller, injector, watchdog, cost meter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai-agents>=0.0.6",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whisperer"]
